fix[client]: Fix style and state issues
1. Fix rendered text and texarea alignment
2. Show scrollbars when text overflows
3. Remove local state in most of the components

--- a/client/src/components/Home/index.module.css
+++ b/client/src/components/Home/index.module.css
@@ -1,6 +1,6 @@
 .textArea {
     color:#FFFFFF;
-    height: 91vh !important;
+    height: calc(100vh - 77px) !important;
     resize: none;
     border: none !important;
 }
